Fixed layout jump when navigating to checkout.html by setting padding-inline in data list (dl)

--- a/index-pixels.css
+++ b/index-pixels.css
@@ -314,6 +314,7 @@ form {
     dl {
         display: grid;
         grid-gap: 4px 16px;
+        padding-inline: 18px;
     }
     dt {
         font-weight: 600;
